# modelling

./: .gitignore  LICENSE  README.md
fdtd/src/python/: fdtd_2d_TE_first.py  fdtd_2d_TE_first_sin.py  fdtd_2d_TE_planewave.py  fdtd_2d_TM_PML.py  fdtd_2d_TM_first.py  fdtd_2d_TM_first_sin.py  fdtd_2d_TM_planewave.py  fdtd_2d_TM_planewave_PML.py  fdtd_abc_first.py  fdtd_abc_second.py  fdtd_dispersion_vacuum.py  fdtd_first_version_01.py  fdtd_first_version_02.py  fdtd_first_version_03.py  fdtd_first_version_04.py  fdtd_first_version_05.py  fdtd_first_version_06.py  fdtd_first_version_EH.py  fdtd_first_version_speed.py  fdtd_heterogen_01.py  fdtd_heterogen_02.py  (+22 more)
src/python/: dispersion.py  fdtd_2d_TE_first.py  fdtd_2d_TE_first_sin.py  fdtd_2d_TE_planewave.py  fdtd_2d_TM_PML.py  fdtd_2d_TM_first.py  fdtd_2d_TM_first_sin.py  fdtd_2d_TM_planewave.py  fdtd_2d_TM_planewave_PML.py  fdtd_abc_first.py  fdtd_abc_second.py  fdtd_abc_simple.py  fdtd_dispersion_vacuum.py  fdtd_first_version_01.py  fdtd_first_version_02.py  fdtd_first_version_03.py  fdtd_first_version_04.py  fdtd_first_version_05.py  fdtd_first_version_06.py  fdtd_first_version_06_parallel.py  fdtd_first_version_EH.py  fdtd_first_version_speed.py  fdtd_heterogen_01.py  fdtd_heterogen_02.py  fdtd_heterogen_sc.py  fdtd_heterogen_sc_layer.py  fdtd_loss.py  fdtd_pml.py  fdtd_pml_2.py  fdtd_pml_3.py  fdtd_pml_4.py  fdtd_ricker.py  fdtd_sources_oop.py  fdtd_swr.py  fdtd_tfsf_gauss.py  fdtd_tfsf_gauss_EH.py  fdtd_tfsf_heterogen.py  fdtd_tfsf_layer_gauss.py  fdtd_tfsf_left_right_gauss.py  fdtd_tfsf_left_right_gauss_pec.py  (+12 more)
(+348 files in other folders)
