[tool.poetry]
name = "fdtd-examples"
version = "0.1.0"
description = "FDTD examples"
authors = ["Eugene Ilin <jenyay.ilin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fdtd_examples"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.3.2"
matplotlib = "^3.10.5"
scipy = "^1.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
